// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/core plugin-options compiles in another way if option has different state 1`] = `
"class Link extends HTMLAnchorElement {
  _bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options compiles in one way if option has one state 1`] = `
"class Link extends HTMLAnchorElement {
  #_bar = 'baz';
}"
`;
